src/app/pages/home-page/home-page.component.scss
/* Pad the compnent and limit max width */
:host {
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    max-width: 828px;
    padding: .5em 0;
}

/* Pad text sections */
section, mat-tree {
    margin: 1em 2em;
}

.ovr-tree {
    /* Hide nested nodes */
    .ovr-tree-invisible {
        display: none;
    }

    /* The default height of 48px is too much */
    .mat-tree-node {
        min-height: 32px;
    }

    /* Offset nested nodes by the width of the chevron */
    .mat-nested-tree-node div[role="group"] {
        padding-left: 24px;
    }
}

